syntax = "proto3";

option go_package = "storage";
option java_package = "io.stackrox.proto.storage";

import "protobuf/gogoproto/gogo.proto";

package storage;

message ImageIntegration {
    string id                                    = 1;
    string name                                  = 2;
    string type                                  = 3;
    // If a list of clusters is provided, the integration will only be accessed from the specified clusters' sensors.
    repeated string clusters                     = 5;
    repeated ImageIntegrationCategory categories = 6;
    oneof IntegrationConfig {
        DTRConfig         dtr       = 7;
        ClairifyConfig    clairify  = 8;
        DockerConfig      docker    = 9;
        QuayConfig        quay      = 10;
        ECRConfig         ecr       = 11;
        TenableConfig     tenable   = 12;
        GoogleConfig      google    = 13;
        ClairConfig       clair     = 14;
        AnchoreConfig     anchore   = 17;
        IBMRegistryConfig ibm       = 20;
    }

    bool autogenerated = 15;
    string cluster_id  = 16;
    bool skip_test_integration = 18;
    reserved 19; // Previously, scannerv2
}

message IBMRegistryConfig {
    string endpoint = 1;
    string api_key  = 2 [(gogoproto.moretags) = "scrub:\"always\""];
}

message QuayConfig {
    string endpoint   = 1;
    string oauthToken = 2 [(gogoproto.moretags) = "scrub:\"always\""];
}

message ClairConfig {
    string endpoint = 1;
}

message ClairifyConfig {
    string endpoint              = 1;
}

message DockerConfig {
    string endpoint = 1;
    string username = 2;
    string password = 3 [(gogoproto.moretags) = "scrub:\"always\""];
    bool insecure   = 4;
}

message ECRConfig {
    string registry_id       = 1;
    string access_key_id     = 2;
    string secret_access_key = 3 [(gogoproto.moretags) = "scrub:\"always\""];
    string region            = 4;
    bool   use_iam           = 5;
    string endpoint          = 6;
}

message DTRConfig {
    string username = 1;
    string password = 2 [(gogoproto.moretags) = "scrub:\"always\""];
    string endpoint = 3;
    bool insecure   = 4;
}

message GoogleConfig {
    string endpoint        = 1;
    string service_account = 2 [(gogoproto.moretags) = "scrub:\"always\""];
    string project         = 3;
}

message TenableConfig {
    string access_key = 1 [(gogoproto.moretags) = "scrub:\"always\""];
    string secret_key = 2 [(gogoproto.moretags) = "scrub:\"always\""];
}

message AnchoreConfig {
    string endpoint   = 1;
    string username   = 2;
    string password   = 3 [(gogoproto.moretags) = "scrub:\"always\""];
}

enum ImageIntegrationCategory {
    REGISTRY = 0;
    SCANNER  = 1;
}
